setup mobile buttons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <div class="divbg choiceContainer">
             <img src="assets/images/rps.png" alt="" id="userChoice">
         </div>
+        <div class="divbg" id="mobilebuttons">
+            <span class="mButton" id="btnR"> &nbsp;R&nbsp;</span>
+            <span class="mButton" id="btnP"> &nbsp;P&nbsp;</span>
+            <span class="mButton" id="btnS"> &nbsp;S&nbsp;</span>
+        </div>
         <div id="results" class="divbg">
             <h1>Results:</h1>
             <p>Wins: 0</p>
